--- a/TalentoPlusAPI/appsettings.json
+++ b/TalentoPlusAPI/appsettings.json
@@ -5,5 +5,23 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JwtSettings": {
+    "Key": "TalentoPlus_Secret_Key_For_JWT_Authentication_Must_Be_Long_Enough",
+    "Issuer": "TalentoPlusAPI",
+    "Audience": "TalentoPlusClients"
+  },
+  "SmtpSettings": {
+    "Host": "smtp.example.com",
+    "Port": 587,
+    "User": "user@example.com",
+    "Pass": "password",
+    "EnableSsl": true
+  },
+  "GeminiSettings": {
+    "ApiKey": "AIzaSyCmCrXOAp5iQ1tFvu1_Bc4oktm_oTIBD8k"
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=bhc5akanxocwyalb81jl-postgresql.services.clever-cloud.com;Port=50013;Database=bhc5akanxocwyalb81jl;Username=ultmilo4js0dy2ffzgol;Password=ZfrnirgPTq8rPZ781OOjVvwOzb6aOF;SSL Mode=Require;Trust Server Certificate=true"
+  }
 }
