--- a/TalentoPlus.Application/TalentoPlus.Application.csproj
+++ b/TalentoPlus.Application/TalentoPlus.Application.csproj
@@ -4,6 +4,12 @@
     <ProjectReference Include="..\TalentoPlus.Domain\TalentoPlus.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="ClosedXML" Version="0.105.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0" />
+    <PackageReference Include="QuestPDF" Version="2025.7.4" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
