--- a/TalentoPlus.Infrastructure/TalentoPlus.Infrastructure.csproj
+++ b/TalentoPlus.Infrastructure/TalentoPlus.Infrastructure.csproj
@@ -1,10 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Http" Version="10.0.1" />
     <ProjectReference Include="..\TalentoPlus.Application\TalentoPlus.Application.csproj" />
     <ProjectReference Include="..\TalentoPlus.Domain\TalentoPlus.Domain.csproj" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.11" />
   </ItemGroup>
 
   <PropertyGroup>
