--- a/TalentoPlusAPI/TalentoPlusAPI.csproj
+++ b/TalentoPlusAPI/TalentoPlusAPI.csproj
@@ -1,5 +1,17 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
+    <ItemGroup>
+      <ProjectReference Include="..\TalentoPlus.Application\TalentoPlus.Application.csproj" />
+      <ProjectReference Include="..\TalentoPlus.Domain\TalentoPlus.Domain.csproj" />
+      <ProjectReference Include="..\TalentoPlus.Infrastructure\TalentoPlus.Infrastructure.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.11" />
+      <PackageReference Include="QuestPDF" Version="2025.7.4" />
+      <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+    </ItemGroup>
+
     <PropertyGroup>
         <TargetFramework>net8.0</TargetFramework>
         <Nullable>enable</Nullable>
