--- a/TalentoPlusWeb/TalentoPlusWeb.csproj
+++ b/TalentoPlusWeb/TalentoPlusWeb.csproj
@@ -13,10 +13,21 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.11" />
+      <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="8.0.11" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.0">
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         <PrivateAssets>all</PrivateAssets>
       </PackageReference>
+      <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.0" />
+      <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+      <PackageReference Include="System.Security.Cryptography.Xml" Version="8.0.2" />
+      <PackageReference Include="Microsoft.AspNetCore.DataProtection" Version="8.0.11" />
+      <PackageReference Include="Microsoft.AspNetCore.Cryptography.Internal" Version="8.0.11" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Pages\Worker\" />
     </ItemGroup>
 
 </Project>
