--- a/TalentoPlusWeb/appsettings.json
+++ b/TalentoPlusWeb/appsettings.json
@@ -6,6 +6,21 @@
     }
   },
   "AllowedHosts": "*",
+  "JwtSettings": {
+    "Key": "TalentoPlus_Secret_Key_For_JWT_Authentication_Must_Be_Long_Enough",
+    "Issuer": "TalentoPlusWeb",
+    "Audience": "TalentoPlusClients"
+  },
+  "SmtpSettings": {
+    "Host": "pro.eu.turbo-smtp.com",
+    "Port": 465,
+    "User": "lucas.chaconc@pca.edu.co",
+    "Pass": "1ldzKskbxnBCAmrXGHp7",
+    "EnableSsl": true
+  },
+  "GeminiSettings": {
+    "ApiKey": "AIzaSyCmCrXOAp5iQ1tFvu1_Bc4oktm_oTIBD8k"
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Host=bhc5akanxocwyalb81jl-postgresql.services.clever-cloud.com;Port=50013;Database=bhc5akanxocwyalb81jl;Username=ultmilo4js0dy2ffzgol;Password=ZfrnirgPTq8rPZ781OOjVvwOzb6aOF;SSL Mode=Require;Trust Server Certificate=true"
   }
